--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,89 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "./blocks/grid.scss";
+@import "./blocks/page.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/benefits.scss";
+@import "./blocks/header.scss";
+@import "./blocks/about-us.scss";
+@import "./blocks/features.scss";
+@import "./blocks/man.scss";
+@import "./blocks/question.scss";
+@import "./blocks/footer.scss";
 
-body {
-  background: $c-gray;
+.slide {
+  background-color: #d0d0d0;
+
+  &__content {
+    box-sizing: border-box;
+    height: 100vh;
+    padding: 20px;
+  }
+
+  &__item {
+    margin-bottom: 24px;
+
+  }
+
+  &__link {
+
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #333;
+  }
+
+  &__list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  &__button {
+
+    &-title {
+      margin-bottom: 20px;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 20px;
+      color: #4f4f4f;
+      text-decoration: none;
+    }
+
+    &-lg {
+      margin-top: 15px;
+
+      &--font {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 20px;
+        color: #333;
+      }
+
+      &--but {
+        margin-top: 20px;
+        display: block;
+        text-decoration: none;
+        width: 102px;
+        height: 48px;
+        background-color: #333;
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 48px;
+        text-align: center;
+        text-transform: uppercase;
+        color: #fff;
+      }
+    }
+  }
+}
+
+.transform {
+  transition: transform 0.3s;
+  // transition: duration ;
+  &:hover {
+    transform: scale(1.05);
+  }
 }
